# Guildest

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  STRIPE_SETUP.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml  deploy-api.yml  deploy-ec2.yml
backend/: README.md
backend/api/: README.md  auth.py  discord_oauth.py  main.py
backend/common/: README.md  config.py  discord_rest.py  logging.py  models.py  openrouter.py
backend/database/: README.md  db.py
backend/discord_gateway/: README.md  __init__.py  app_commands.py  config.py  main.py  publisher.py  requirements.txt
backend/queue/: README.md  __init__.py  client.py
backend/workers/: README.md  __init__.py  consumer.py
backend/workers/analytics/: README.md  __init__.py  main.py
backend/workers/commands/: README.md  __init__.py  main.py
backend/workers/moderation/: README.md  __init__.py  main.py
backend/workers/sentiment/: README.md  __init__.py  main.py
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: ai.rs  config.rs  events.rs  jobs.rs  lib.rs  queue.rs  store.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/intake-lab/: Cargo.toml
crates/intake-lab/src/: main.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: ai-agent-pivot.md  analytics-tracking.md  architecture.md  backfill-lab.md  docusaurus.config.ts  dream-50.md  intake-footprint-lab.md  worker-backfill-benchmark.md
docs/docs/: changelog.md  intro.md
docs/src/pages/: pricing.md
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  supervisord.conf
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/backend/[...path]/: route.ts
frontend/src/app/api/billing/checkout/: route.ts
frontend/src/app/api/billing/portal/: route.ts
frontend/src/app/auth/callback/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx  ui.tsx
frontend/src/app/dashboard/[guildId]/: page.tsx
frontend/src/app/dashboard/[guildId]/analytics/: page.tsx
frontend/src/app/dashboard/[guildId]/appeals/: page.tsx
frontend/src/app/dashboard/[guildId]/moderation/: page.tsx
frontend/src/app/dashboard/billing/: page.tsx
frontend/src/app/guilds/[guildId]/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/components/: Charts.tsx  analytics-charts.tsx  analytics-dashboard.tsx  appeals-table.tsx  auto-start-plan-checkout.tsx  auto-start-pro-checkout.tsx  billing-buttons.tsx  checkout-plan-button.tsx  checkout-pro-button.tsx  connect-guild-button.tsx  disconnect-guild-button.tsx  moderation-log-view.tsx  settings-form.tsx  sidebar.tsx
frontend/src/lib/: api.ts  backend.server.ts  types.ts
infra/: backend-minimal.compose.yml  backfill-lab.env.example  docker-compose.backfill-lab.yml  mock_discord_api.py  prometheus.docker.yml  prometheus.local.yml
infra/production/: Caddyfile  api.compose.yml
scripts/: backfill-lab-down.sh  backfill-lab-seed.sh  backfill-lab-serve.sh  backfill-lab-trigger.sh  backfill-lab-up.sh  enqueue_backfill_job.py  provision-api-ec2.sh  public_stats_stress.py  run-codex-backend.sh  stop-codex-backend.sh
tests/: test_database.py  test_queue_worker.py
web/src/app/: globals.css  layout.tsx  page.tsx  subscribe-form.tsx
web/src/app/api/subscribe/: route.ts
web/src/app/api/teams-lead/: route.ts
web/src/app/api/waitlist/: route.ts
web/src/app/dashboard/: page.tsx
web/src/app/dashboard/ai/: page.tsx
web/src/app/dashboard/hotspots/: page.tsx
web/src/app/dashboard/users/: page.tsx
web/src/app/teams/: page.tsx  teams-lead-form.tsx
web/src/app/waitlist/: page.tsx  waitlist-form.tsx
web/src/components/: charts.tsx  dashboard-nav.tsx  dead-letter-actions.tsx  guild-sidebar.tsx  heatmap.tsx  site-nav.tsx
web/src/lib/: public-api.ts
(+13 files in other folders)
